# dj-course

./: .claude  .github  SPEECH-TO-TEXT.md
.cursor/commands/: run-generator.md
M1/: HOMEWORK-cz.1.md  HOMEWORK-cz.2.md  README.md
M1/azor-chatdog-js/: .env.example  README.md  package-lock.json  package.json  plan.md
M1/azor-chatdog-py/: .cursorignore  .env.example  .gitignore  README.md  requirements.txt
M1/external-model-google-genai-py/: requirements.txt  run.py
M1/jupyter/: notebook.ipynb
M1/mlflow/: run-local-model.py
M1/tokenizer/: tokenize-visualize.py  tokenizer-build.py  tokenizer-cynamon.py
M2/: HOMEWORK.md
M2/text-to-song/: README.md  przyklad-1.md  przyklad-2.md  przyklad-3.md
M2/text-to-speech-xtts/: requirements.txt  run.py
M2/toon/: gen-from-json.py  requirements.txt  tokenize-json-toon.py  tokenize-marimo.py
M2/transcriber/: README.md  requirements.txt  transcribe-long.py  transcribe.py
M2/transcriber-ui/: .gitignore  README.md  app.py  requirements.txt  tkinter-only.py
M3/claude/: settings.local.json
M3/copilot/: copilot-instructions.md
M3/lovable-calendar/: PROMPT.md
M3/lovable-logistics-hub-main/: README.md  index.html
M3/lovable-logistics-navigator-main/: README.md  index.html  tailwind.config.ts
M3/mcp-docker-tools/: README.md  package-lock.json  server.js
M3/mcp-playground-js/: README.md  package-lock.json  package.json  server.js
M3/mcp-playground-py/: README.md  pyproject.toml  server.py
M3/tms-api/: PLAN.md  app.py  run.sh
M3/tms-data-generator/: .gitignore  CLAUDE.md  (+1 more)
M4/: HOMEWORK.md  README.md
(+125 files in other folders)
